Changes spacing between input field and text, fixes #23

--- a/assets/css/spacing.css
+++ b/assets/css/spacing.css
@@ -1,4 +1,8 @@
 /* margins and paddings */
+.mb-sm {
+    margin-bottom: 16.5pt;
+}
+
 .mb-md {
     margin-bottom: 22.5pt;
 }
